--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "nuxt": "^3.11.2",
     "postcss": "^8.4.38",
